Aanvullingen pagina's Matilda en projectrapport

--- a/Matilda/matilda_smartbusiness.html
+++ b/Matilda/matilda_smartbusiness.html
@@ -27,7 +27,7 @@
 
     <div class="main Matilda">
     <h2>Smart Business</h2>
-    <h4>Workshop 1, Aug 30, 2023</h4>
+    <h3>Workshop 1, Aug 30, 2023</h3>
     <p>Tijdens de eerste workshop Smart Business op woensdag 30 augustus hebben we de give & take van iedereen zichtbaar
         gemaakt. Ik geef vooral business (HBO studie Food & Business) en zal meer nemen op het gebied van techniek
         (middelbare school niveau 3D-printen, robotica en informatica).</p>
@@ -86,7 +86,7 @@
     </ol>
     </br>
 
-    <h4>Workshop 2, Sept 20, 2023</h4>
+    <h3>Workshop 2, Sept 20, 2023</h3>
     <p>Tijdens de 2e Smart Business workshop op woensdag 20 september was Geert Rensen van Be Informed op bezoek om ons
         aan de hand van de AXA verzekeringscasus meer te leren over het Business Model Canvas. Samen met Daan en Ezra
         heb ik deze ingevuld (zie foto hieronder) en samen met Ezra heb ik deze gepitcht (zie slides onderaan). Het BMC
@@ -112,7 +112,7 @@
     </iframe>
     </br>
 
-    <h4>Workshop 3, Sept 27, 2023</h4>
+    <h3>Workshop 3, Sept 27, 2023</h3>
     <p>Woensdag 27 september zijn we op bedrijfsbezoek bij Elk geweest (zie foto’s hieronder). </p>
     <img src="../images/Elk1.png">
     <img src="../images/Elk2.png">
@@ -135,7 +135,13 @@
     </p>
     </br>
 
-    <h4> Workshop 4, Okt 6, 2023</h4>
+    <h3> Workshop 4, Okt 6, 2023</h3>
+    <p>Ter voorbereiding op deze workshop hebben Hieke, Tomas en ik samen een BMC voor Giesbers gemaakt:</p>
+    <iframe src="../files/business-model-canvas Giesbers.pdf#view=fitH" name="BMC Giesbers">
+        <p>Deze browser ondersteunt geen iFrames.</p>
+        <p>Open deze <a href="../files/business-model-canvas Giesbers.pdf" target="_blank">link</a> om de BMC van Giesbers in te
+            zien.</p>
+    </iframe>
     <p>Op vrijdag 6 oktober heeft Paul Kalis een gastcollege/interactieve sessie over operational excellence voor ons
         verzorgd.</p>
     <img src="../images/Operational excellence1.png">
@@ -183,12 +189,15 @@
     </ul>
     </br>
 
-    <h4>Workshop 5, Okt 11, 2023</h4>
+    <h3>Workshop 5, Okt 11, 2023</h3>
     <p>Woensdag 11 oktober heeft Yvonne Peterman ons begeleidt samen met Mariëlle tijdens het spelen van een
         managementgame. Hiervoor kreeg de klas rollen toegewezen om te leren om te gaan met weerstand en samen tot een
         oplossing te komen. Van Mariëlle kreeg ik nog een compliment dat ik een professioneel gesprek gevoerd heb met
         Sander (directie). Ik heb er van geleerd dat ik mijn grenzen aan mag geven en niet te veel naar hiërarchie moet
         kijken binnen een bedrijf.</p>
+        <img src="../images/Peterman.png">
+        <img src="../images/Peterman2.png">
+        <img src="../images/Peterman3.png">
     </br>
 
     <script>
