--- a/Matilda/matilda_smartconnection.html
+++ b/Matilda/matilda_smartconnection.html
@@ -23,101 +23,157 @@
 
 
     <div id="nav-placeholder"></div>
-  
+
     <div class="main Matilda">
-    <h2>Smart Connection</h2>
-    <h4>Workshop 1, Sept 1, 2023</h4>
-    <p>Op vrijdag 1 september zijn we als klas de dag begonnen met reflecteren op de 6 criteria voor de minor smart
-        industry. Hier heb ik aangegeven dat ik vooral betrokkenheid heb getoond, door aan alle workshops dusver
-        aanwezig te zijn en gewerkt heb aan disciplines buiten eigen vak. Gisteren heb ik namelijk kennisgemaakt met
-        Internet of Things met behulp van Arduino.</p>
-    <p> Vervolgens heb ik geleerd over HTML code en GitHub. Ik heb veel vragen gesteld aan Brian, zodat ik het goed
-        begreep wat er stond. Ik heb bijvoorbeeld geleerd om de HTML code aan te passen en zo bijvoorbeeld te verwijzen
-        naar een online video of afbeelding (zie foto hieronder). Eerst lukte het niet om naar de afbeelding te
-        verwijzen. Brian heeft mij uitgelegd dat ik dan de afbeelding los moet openen in een nieuw tabblad om de juiste
-        link te kunnen kopiëren en die toe te voegen aan de HTML code. Ook hebben we samen in de workshop CSS
-        geïmplementeerd in de HTML code.</p>
-    <img src="../images/HTML1.png">
-    </br>
+        <h2>Smart Connection</h2>
+        <h3>Workshop 1, Sept 1, 2023</h3>
+        <p>Op vrijdag 1 september zijn we als klas de dag begonnen met reflecteren op de 6 criteria voor de minor smart
+            industry. Hier heb ik aangegeven dat ik vooral betrokkenheid heb getoond, door aan alle workshops dusver
+            aanwezig te zijn en gewerkt heb aan disciplines buiten eigen vak. Gisteren heb ik namelijk kennisgemaakt met
+            Internet of Things met behulp van Arduino.</p>
+        <p> Vervolgens heb ik geleerd over HTML code en GitHub. Ik heb veel vragen gesteld aan Brian, zodat ik het goed
+            begreep wat er stond. Ik heb bijvoorbeeld geleerd om de HTML code aan te passen en zo bijvoorbeeld te
+            verwijzen
+            naar een online video of afbeelding (zie foto hieronder). Eerst lukte het niet om naar de afbeelding te
+            verwijzen. Brian heeft mij uitgelegd dat ik dan de afbeelding los moet openen in een nieuw tabblad om de
+            juiste
+            link te kunnen kopiëren en die toe te voegen aan de HTML code. Ook hebben we samen in de workshop CSS
+            geïmplementeerd in de HTML code.</p>
+        <img src="../images/HTML1.png">
+        </br>
 
-    <h4>Workshop 2, Sept 6, 2023</h4>
-    <p>Op woensdag 6 september was de tweede workshop van Smart Connection gepland. Tijdens de workshop hebben we eerst
-        de HTML herhaalt van vorige week en daarna hebben we samen de code doorgenomen. Vooral bij laatste voorbeeld
-        (zie foto) kregen we hoe je een invulveld kon programmeren en meer over de opmaak wat allemaal mogelijk is,
-        zoals een fixed box met “Hello” aan de zijkant, een dotted omlijsting en als je met je muis over een knop gaat
-        dat deze van kleur verandert (zie foto hieronder). Voor volgende week is het de bedoeling dat we alvast zelf
-        gespeelt/geprobeerd hebben om een eigen portfolio pagina op te zetten.
-        Aan het einde van de les hebben we als klas nog gereflecteerd op de competenties en hier heb ik aangegeven dat
-        ik vandaag vooral gewerkt heb aan competentie 1 (initiatief/betrokkenheid) - vragen stellen aan opdrachtgevers
-        en competentie 4 (persoonlijke groei) - andere discipline/opdracht kiezen; meer out-of-the-box om mijzelf uit te
-        dagen en te ontdekken of de bouwsector iets voor mij is. Vorig schooljaar heb ik een studiekeuzeadvies traject
-        gevolgd, waaruit bleek dat de huidige opleiding te weinig praktisch voor mij is en dat ik vooral interesse heb
-        in de architectuur/ontwerp richting. De opdracht van Giesbers zou dus een mooie mogelijkheid voor mij zijn om
-        dit verder te onderzoeken.
-    </p>
-    <img src="../images/HTML2.png">
-    </br>
+        <h3>Workshop 2, Sept 6, 2023</h3>
+        <p>Op woensdag 6 september was de tweede workshop van Smart Connection gepland. Tijdens de workshop hebben we
+            eerst
+            de HTML herhaalt van vorige week en daarna hebben we samen de code doorgenomen. Vooral bij laatste voorbeeld
+            (zie foto) kregen we hoe je een invulveld kon programmeren en meer over de opmaak wat allemaal mogelijk is,
+            zoals een fixed box met “Hello” aan de zijkant, een dotted omlijsting en als je met je muis over een knop
+            gaat
+            dat deze van kleur verandert (zie foto hieronder). Voor volgende week is het de bedoeling dat we alvast zelf
+            gespeelt/geprobeerd hebben om een eigen portfolio pagina op te zetten.
+            Aan het einde van de les hebben we als klas nog gereflecteerd op de competenties en hier heb ik aangegeven
+            dat
+            ik vandaag vooral gewerkt heb aan competentie 1 (initiatief/betrokkenheid) - vragen stellen aan
+            opdrachtgevers
+            en competentie 4 (persoonlijke groei) - andere discipline/opdracht kiezen; meer out-of-the-box om mijzelf
+            uit te
+            dagen en te ontdekken of de bouwsector iets voor mij is. Vorig schooljaar heb ik een studiekeuzeadvies
+            traject
+            gevolgd, waaruit bleek dat de huidige opleiding te weinig praktisch voor mij is en dat ik vooral interesse
+            heb
+            in de architectuur/ontwerp richting. De opdracht van Giesbers zou dus een mooie mogelijkheid voor mij zijn
+            om
+            dit verder te onderzoeken.
+        </p>
+        <img src="../images/HTML2.png">
+        </br>
 
-    <h4>Workshop 3, Sept 13, 2023</h4>
-    <p>Woensdag 13 september heb ik tijdens de workshop geleerd over API. API staat voor Application Programming
-        Interface en is een manier om op geformaliseerde manier gegevens uit te wisselen tussen een laptop en database
-        bijvoorbeeld. Wij hebben dit geprobeerd met Open Weather. Hubèrt heeft uitleg gegeven over de code en daarna
-        konden we zelf aan de slag met de tutorial. Ik vond dit best wel lastige code, maar met een beetje hulp van
-        Brian - ik kreeg de developer console niet geopend -, is het gelukt (zie foto's hieronder).</p>
-    <!-- <p><a href="../Matilda/">API's</a></p> -->
-    <iframe src="Weather.html" name="weather API">
-        <p>Deze browser ondersteunt geen iFrames.</p>
-        <p>Open deze <a href="Weather.html" target="_blank">link</a> om de weer API te zien.</p>
-    </iframe>
+        <h3>Workshop 3, Sept 13, 2023</h3>
+        <p>Woensdag 13 september heb ik tijdens de workshop geleerd over API. API staat voor Application Programming
+            Interface en is een manier om op geformaliseerde manier gegevens uit te wisselen tussen een laptop en
+            database
+            bijvoorbeeld. Wij hebben dit geprobeerd met Open Weather. Hubèrt heeft uitleg gegeven over de code en daarna
+            konden we zelf aan de slag met de tutorial. Ik vond dit best wel lastige code, maar met een beetje hulp van
+            Brian - ik kreeg de developer console niet geopend -, is het gelukt (zie foto's hieronder).</p>
+        <!-- <p><a href="../Matilda/">API's</a></p> -->
+        <iframe src="Weather.html" name="weather API">
+            <p>Deze browser ondersteunt geen iFrames.</p>
+            <p>Open deze <a href="Weather.html" target="_blank">link</a> om de weer API te zien.</p>
+        </iframe>
 
-    <iframe src="NASA.html" name="NASA API">
-        <p>Deze browser ondersteunt geen iFrames.</p>
-        <p>Open deze <a href="NASA.html" target="_blank">link</a> om de weer API te zien.</p>
-    </iframe>
-    </br>
+        <iframe src="NASA.html" name="NASA API">
+            <p>Deze browser ondersteunt geen iFrames.</p>
+            <p>Open deze <a href="NASA.html" target="_blank">link</a> om de weer API te zien.</p>
+        </iframe>
+        </br>
 
 
-    <h4>Workshop 4, Sept 21, 2023</h4>
-    <p>De week daarop heeft Witek, met aanvullingen van Rinke, uitleg gegeven over analytics (aan de hand van
-        voorbeelden > zie foto’s) en de DIKW pyramid: </p>
-    <ul>
-        <li> Data: observatie > losse punten (sensor) </li>
-        <li> Information: informatie heeft betekenis > leggen van relaties </li>
-        <li> Knowledge: kennis > conclusies, wetmatigheid</li>
-        <li> Wisdom: wijsheid > beslissen wat je moet gaan doen</li>
-    </ul>
-    <p> Python is de programmeer taal voor data science en daarmee kun je een hele website maken.
-    </p>
-    <img src="../images/SmartConnection21sept.png">
-    <img src="../images/SmartConnection21sept-2.png">
-    <img src="../images/SmartConnection21sept-3.png">
-    <img src="../images/SmartConnection21sept-4.png">
-    </br>
+        <h3>Workshop 4, Sept 21, 2023</h3>
+        <p>De week daarop heeft Witek, met aanvullingen van Rinke, uitleg gegeven over analytics (aan de hand van
+            voorbeelden > zie foto’s) en de DIKW pyramid: </p>
+        <ul>
+            <li> Data: observatie > losse punten (sensor) </li>
+            <li> Information: informatie heeft betekenis > leggen van relaties </li>
+            <li> Knowledge: kennis > conclusies, wetmatigheid</li>
+            <li> Wisdom: wijsheid > beslissen wat je moet gaan doen</li>
+        </ul>
+        <p> Python is de programmeer taal voor data science en daarmee kun je een hele website maken.
+        </p>
+        <img src="../images/SmartConnection21sept.png">
+        <img src="../images/SmartConnection21sept-2.png">
+        <img src="../images/SmartConnection21sept-3.png">
+        <img src="../images/SmartConnection21sept-4.png">
+        </br>
 
-    <h4>Workshop 5, Sept 28, 2023</h4>
-    <p>Vandaag heeft Witek tijdens de workshop Smart Connection uitleg gegeven over AI en allerlei
-        voorbeelden gegeven. Het belangrijkste wat ik uit deze workshop heb meegenomen is, dat ‘Explainable en
-        Responsible AI’ problemen zijn die de komende jaren opgelost moeten worden. </p>
-    </br>
+        <p>Aan het einde van de workshop hebben we via Google Forums een reflectie ingevuld: </p>
+        <table>
+            <tr>
+                <th>Competentie</th>
+                <th>Toelichting</th>
+            </tr>
+            <tr>
+                <td>1. Ik neem veel initiatief en ik toon betrokkenheid.</td>
+                <td>In mijn eigen tijd heb ik gewerkt aan de printplaat en mijn logboek. Ook ben ik alle workshops op
+                    tijd aanwezig en tot het einde blijf ik actief deelnemen.</td>
+            </tr>
+            <tr>
+                <td>2. Ik doe eerst onderzoek voordat ik mijn mening geef of adviseer.</td>
+                <td>Voor het Business Model Canvas heb ik eerst onderzoek gedaan naar verzekeringen om het model zo
+                    volledig mogelijk in te kunnen vullen. </td>
+            </tr>
+            <tr>
+                <td>3. Ik kies ambitieuze leerdoelen en verken disciplines buiten mijn eigen vakgebied.</td>
+                <td>De workshops 3D-printen, printplaat ontwerpen, data analytics, zijn allemaal disciplines buiten mijn
+                    eigen vakgebied die ik deze week verkend heb en ik heb smart leerdoelen opgesteld deze week. </td>
+            </tr>
+            <tr>
+                <td>4. Ik ben bewust bezig met mijn persoonlijke groei.</td>
+                <td>Tijdens de workshop smart business serieus gereflecteerd en bewust bezig met mijn leerdoelen en het
+                    bijhouden van mijn logboek.</td>
+            </tr>
+            <tr>
+                <td>5. Ik gebruik feedback (geven & vragen) en zelfreflectie om te leren.</td>
+                <td>Tijdens het invullen van het Business Model Canvas heb ik samen met Daan en Ezra om feedback
+                    gevraagd aan Geert. Daarnaast pas ik zelfreflectie toe door bijvoorbeeld de STARR+- in te vullen
+                    voor het kookcollege. </td>
+            </tr>
+            <tr>
+                <td>6. Ik help actief anderen groeien.</td>
+                <td>Het lukte Lea niet om bepaalde functies te vinden in Solidworks en daar heb ik haar bij geholpen.
+                    Daarnaast heb ik het BMC van Spotify gebruikt om sommige onderdelen uit te leggen aan Ezra wat deze
+                    inhouden. </td>
+            </tr>
+        </table>
+        </br>
 
-    <h4>Workshop 6, Okt 5, 2023</h4>
-    <p>Tijdens deze workshop zijn we verder aan de slag gegaan met InfluxDB. Thuis had ik op
-        dinsdag 3 oktober data verzameld en een bucket aangemaakt waar ik de data naartoe kon schrijven in InfluxDB (zie
-        foto hieronder).
-    </p>
-    <img src="../images/InfluxDB.png">
-    <p> Veel klasgenoten hadden geen data verzameld. Die gingen daarmee aan de slag samen met Hubèrt. Ik kon met mijn
-        vooraf verzamelde data spelen en heb bijvoorbeeld het gemiddelde weergegeven in een dashboard (zie foto’s
-        hieronder). </p>
-    <img src="../images/DashboardInfluxDB.png">
-    <img src="../images/TemperatuurInfluxDB.png">
-    </br>
+        <h3>Workshop 5, Sept 28, 2023</h3>
+        <p>Workshop begonnen met het reflecteren op de verschillende competenties (zie foto hieronder).</p>
+            <img src="../images/Reflectie.png">
+        <p>Vandaag heeft Witek tijdens de workshop Smart Connection uitleg gegeven over AI en allerlei
+            voorbeelden gegeven. Het belangrijkste wat ik uit deze workshop heb meegenomen is, dat ‘Explainable en
+            Responsible AI’ problemen zijn die de komende jaren opgelost moeten worden. </p>
+        </br>
 
-    <script>
-        $(function () {
-            $("#nav-placeholder").load("navigatie.html");
-        });
-    </script>
+        <h3>Workshop 6, Okt 5, 2023</h3>
+        <p>Tijdens deze workshop zijn we verder aan de slag gegaan met InfluxDB. Thuis had ik op
+            dinsdag 3 oktober data verzameld en een bucket aangemaakt waar ik de data naartoe kon schrijven in InfluxDB
+            (zie
+            foto hieronder).
+        </p>
+        <img src="../images/InfluxDB.png">
+        <p> Veel klasgenoten hadden geen data verzameld. Die gingen daarmee aan de slag samen met Hubèrt. Ik kon met
+            mijn
+            vooraf verzamelde data spelen en heb bijvoorbeeld het gemiddelde weergegeven in een dashboard (zie foto’s
+            hieronder). </p>
+        <img src="../images/DashboardInfluxDB.png">
+        <img src="../images/TemperatuurInfluxDB.png">
+        </br>
+
+        <script>
+            $(function () {
+                $("#nav-placeholder").load("navigatie.html");
+            });
+        </script>
 
 </body>
 
