--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         <div class="main">
             <h2>Het onderzoeksrapport</h2>
             <p>Het onderzoeksrapport voor Giesbers is hieronder te lezen.</p>
-            <iframe src="files/placeholder_projectbrief.pdf" name="onderzoeksrapport">
+            <iframe src="files/Projectbrief Giesbers.pdf" name="onderzoeksrapport">
                 <p>Deze browser ondersteunt geen iFrames.</p>
                 <p>Open deze <a href="files/placeholder_projectbrief.pdf" target="_blank">link</a> om het
                     onderzoeksrapport in te zien.</p>
@@ -45,6 +45,14 @@
             <iframe src="files/Pitstop 13-12-2023.pdf#view=fitH" name="presentatie pitstop">
                 <p>Deze browser ondersteunt geen iFrames.</p>
                 <p>Open deze <a href="files/Pitstop 13-12-2023.pdf" target="_blank">link</a> om de pitstop presentatie
+                    in te zien.</p>
+            </iframe>
+
+            <h2>Presentatie tussentijdse pitstop</h2>
+            <p>De presentatie van de tussentijdse pitstop is hieronder terug te zien.</p>
+            <iframe src="files/Tussentijdse pitch 1-11-2023.pdf" name="presentatie tussentijdse pitstop">
+                <p>Deze browser ondersteunt geen iFrames.</p>
+                <p>Open deze <a href="files/Tussentijdse pitch 1-11-2023.pdf" target="_blank">link</a> om de tussentijdse pitstop presentatie
                     in te zien.</p>
             </iframe>
         </div>
