--- a/matilda_ontwikkeling.html
+++ b/matilda_ontwikkeling.html
@@ -33,12 +33,34 @@
             <a href="matilda/matilda_smartme.html" class="button">Lees meer</a>
         </div>
     </div>
+    
+    <div class="ontwikkeling">
+        <div class="workshopimg">
+            <img src="images/Smart_me_competenties.png" alt="plaatje Smart Me competenties">
+        </div>
+        <div class="description">
+            <h3>Competenties</h3>
+            <p>Mijn eindreflectie op de competenties van de Minor Smart Industry is hier te lezen.</p>
+            <a href="matilda/matilda_competenties.html" class="button">Lees meer</a>
+        </div>
+    </div>
+
+    <div class="ontwikkeling">
+        <div class="workshopimg">
+            <img src="images/Naslagwerk.png" alt="plaatje naslagwerk">
+        </div>
+        <div class="description">
+            <h3>Logboek</h3>
+            <p>Hier is mijn logboek terug te lezen ter naslagwerk.</p>
+            <a href="matilda/matilda_logboek.html" class="button">Lees meer</a>
+        </div>
+    </div>
 
     <iframe src="files/placeholder.pdf" name="logboek">
         <p>Deze browser ondersteunt geen iFrames.</p>
         <p>Open deze <a href="files/placeholder.pdf" target="_blank">link</a> om mijn portfolio in te zien.</p>
     </iframe>
-
+   
     <script>
         $(function () {
             $("#nav-placeholder").load("navigatie.html");
