tekst html hieke

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -168,22 +168,23 @@
                     </p>
 
             <h2>Smart Connection</h2>
-                <p> Inleiding
+                <p> Tijdens de lessen van Smart Connection zijn we vooral praktisch bezig geweest op de laptop.
+                    De lessen draaiden vooral om het schrijven van HTML- of CSS-code. 
                 </p>
                 <h4>HTML en CSS</h4>
-                    <p> Tijdens de Smart Connection-les ben ik buiten mijn eigen vakgebied getreden en heb ik kennis gemaakt met HTML.
+                    <p> Tijdens de Smart Connection-les ben ik buiten mijn eigen vakgebied getreden en heb ik kennisgemaakt met HTML.
                         Dit aspect staat haaks op mijn technische studie, wat mijn interesse in dit onderdeel van de minor heeft aangewakkerd.
-                        In de allereerste les slaagde ik er al in om een website aan te passen door video's en foto's toe te voegen, en tekst te wijzigen in grootte en dikte.
+                        In de allereerste les slaagde ik er al in om zelf een website te maken en aan te passen door video's en foto's toe te voegen, en tekst te wijzigen in grootte en dikte.
                         Deze aanpassingen voerde ik uit door HTML-code toe te voegen of aan te passen in het programma Visual Studio Code.
-                        Deze ervaring heeft mijn begrip van het bouwen van websites aanzienlijk vergroot.
+                        Deze ervaring heeft mijn begrip van het bouwen van websites aanzienlijk vergroot. 
                     </p>
                     <p> In de onderstaande link is de door mij gemaakte site weergegeven:</p>
                     <p><a href="Hieke\Eigen site\Eigen site.html">Eigen site</a></p>
 
-                <h4>onderwerp</h4>
-                    <p> 1e kopje
-                    </p>
-                    <p> 2e kopje
+                    <p> Vervolgens heeft de docent ons laten zien dat je ook een website live kunt laten werken.
+                        Dit hebben we dan ook zelf geprogrammeerd en geoefend.
+                        Zo staat hieronder het live weerbericht van Willemstad (Curaçao) dat per dag aangeeft wat het weerbericht daar is.
+                        Verder staat daaronder de dagelijkse foto van NASA die wij ook hebben leren opzetten.
                     </p>
                     <p> In de onderstaande figuren is zowel het live weerbericht in Willemstad (Curaçoa) als de NASA foto van de dag:</p>
                     <div class="main-hieke">
